# steering-model-organisms

./: .gitignore  AGENTS.md  model_config.json  prompt.py  pyproject.toml  sky.yaml
data/: common_claim_true_false.csv
src/: __init__.py  evaluation.py  experiments.py  model_diff.py  probing.py  steering.py  utils.py
